--- a/polybar/config
+++ b/polybar/config
@@ -30,12 +30,12 @@ alert = #bd2c40
 [bar/example]
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
-height = 20
+height = 30
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
 fixed-center = true
-bottom = true
+# bottom = true
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -436,14 +436,17 @@ label-close-foreground = ${colors.secondary}
 label-separator = |
 label-separator-foreground = ${colors.foreground-alt}
 
-menu-0-0 = reboot
-menu-0-0-exec = systemctl reboot
-menu-0-1 = power off
-menu-0-1-exec = systemctl poweroff
+menu-0-0= suspend
+menu-0-0-exec = systemctl suspend
+menu-0-1 = reboot
+menu-0-1-exec = systemctl reboot
+menu-0-2 = power off
+menu-0-2-exec = systemctl poweroff
 
 [module/playercurrent]
 type = custom/script
 exec = $HOME/.config/custom_scripts/player.sh
+interval = 1
 
 
 [settings]
