--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,6 @@
 	path = zsh/plugins/oh-my-git-aliases
 	url = https://github.com/mjkonarski/oh-my-git-aliases.git
     branch = master
+[submodule "kitty/kitty-themes"]
+	path = kitty/kitty-themes
+	url = git@github.com:dexpota/kitty-themes.git
