--- a/kitty/colors.conf
+++ b/kitty/colors.conf
@@ -1,20 +1,36 @@
-# BEGIN ACE
-background #1b1e25
-foreground #cbdee3
-color0 #1b1e25
-color1 #5C758D
-color2 #6D92A9
-color3 #78B4C8
-color4 #9BADA1
-color5 #87ADC6
-color6 #8BC1D1
-color7 #cbdee3
-color8 #8e9b9e
-color9 #5C758D
-color10 #6D92A9
-color11 #78B4C8
-color12 #9BADA1
-color13 #87ADC6
-color14 #8BC1D1
-color15 #cbdee3
-# END ACE
+# vim:fileencoding=utf-8:ft=conf
+#: Color scheme 
+foreground   #e6e6dc
+background   #002635
+
+# black
+color0       #00384d
+color8       #517f8d
+
+# red
+color1       #c43061
+color9       #ff5a67
+
+# green
+color2       #7fc06e
+color10      #9cf087
+
+# yellow
+color3       #f08e48
+color11      #ffcc1b
+
+# blue
+color4       #1c8db2
+color12      #7eb2dd
+
+# magenta
+color5       #c694ff
+color13      #fb94ff
+
+# cyan
+color6       #00cccc
+color14      #00ffff
+
+# white
+color7       #77929e
+color15      #b7cff9
