--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,5 @@
-# include colors.conf
-include ./kitty-themes/themes/Darkside.conf
+include colors.conf
+# include ./kitty-themes/themes/Darkside.conf
 
 enable_audio_bell no
 
