--- a/.gitmodules
+++ b/.gitmodules
@@ -21,6 +21,8 @@
 [submodule "kitty/kitty-themes"]
 	path = kitty/kitty-themes
 	url = git@github.com:dexpota/kitty-themes.git
+	branch = master
 [submodule "zsh/plugins/hacker-quotes"]
 	path = zsh/plugins/hacker-quotes
 	url = git@github.com:oldratlee/hacker-quotes.git
+	branch = master
